@@ -20,6 +20,7 @@ import static us.fatehi.test.utility.extensions.FileHasContent.outputOf;
 
 import java.sql.Connection;
 import java.util.Arrays;
+import java.util.List;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -61,11 +62,17 @@ public class RoutineRetrieverFunctionsTest {
         InformationSchemaViewsBuilder.builder()
             .withSql(
                 InformationSchemaKey.FUNCTIONS,
-                "SELECT "
-                    + "PROCEDURE_CAT AS FUNCTION_CAT, PROCEDURE_SCHEM AS FUNCTION_SCHEM, "
-                    + "PROCEDURE_NAME AS FUNCTION_NAME, PROCEDURE_TYPE AS FUNCTION_TYPE, "
-                    + "REMARKS, SPECIFIC_NAME "
-                    + "FROM INFORMATION_SCHEMA.SYSTEM_PROCEDURES")
+                """
+                SELECT
+                  PROCEDURE_CAT AS FUNCTION_CAT,
+                  PROCEDURE_SCHEM AS FUNCTION_SCHEM,
+                  PROCEDURE_NAME AS FUNCTION_NAME,
+                  PROCEDURE_TYPE AS FUNCTION_TYPE,
+                  REMARKS,
+                  SPECIFIC_NAME
+                FROM
+                  INFORMATION_SCHEMA.SYSTEM_PROCEDURES
+                """)
             .toOptions();
     final SchemaRetrievalOptionsBuilder schemaRetrievalOptionsBuilder =
         SchemaRetrievalOptionsBuilder.builder();
@@ -80,7 +87,7 @@ public class RoutineRetrieverFunctionsTest {
 
     final RoutineRetriever functionRetriever =
         new RoutineRetriever(retrieverConnection, catalog, options);
-    functionRetriever.retrieveRoutines(Arrays.asList(RoutineType.function), new IncludeAll());
+    functionRetriever.retrieveRoutines(List.of(RoutineType.function), new IncludeAll());
 
     final TestWriter testout = new TestWriter();
     try (final TestWriter out = testout) {
