@@ -11,7 +11,7 @@ package schemacrawler.test;
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
 
-import java.util.Arrays;
+import java.util.List;
 import org.junit.jupiter.api.Test;
 import schemacrawler.inclusionrule.InclusionRule;
 import schemacrawler.inclusionrule.ListExclusionRule;
@@ -19,12 +19,12 @@ import schemacrawler.inclusionrule.ListExclusionRule;
 public class ListExclusionRuleTest {
 
   final InclusionRule exclusionRule =
-      new ListExclusionRule(Arrays.asList("ORDDATA", "\"SYSTEM\"", "APEX_123456", "FLOWS_12345"));
+      new ListExclusionRule(List.of("ORDDATA", "\"SYSTEM\"", "APEX_123456", "FLOWS_12345"));
 
   @Test
   public void closeEnoughs() {
 
-    final String[] closeEnoughs = new String[] {"ORDDAT", "SYSTEM", "APEX_12345", "FLOWS_1234567"};
+    final String[] closeEnoughs = {"ORDDAT", "SYSTEM", "APEX_12345", "FLOWS_1234567"};
     for (final String closeEnough : closeEnoughs) {
       assertThat(
           "<%s> - exclude close enough strings - inclusion rule should evaluate to true"
@@ -37,7 +37,7 @@ public class ListExclusionRuleTest {
   @Test
   public void empties() {
 
-    final String[] empties = new String[] {null, "", "\t", "  "};
+    final String[] empties = {null, "", "\t", "  "};
     for (final String empty : empties) {
       assertThat(
           "<%s> - exclude empties - inclusion rule should evaluate to false".formatted(empty),
@@ -49,7 +49,7 @@ public class ListExclusionRuleTest {
   @Test
   public void valid() {
 
-    final String[] valids = new String[] {"ORDDATA", "\"SYSTEM\"", "APEX_123456", "FLOWS_12345"};
+    final String[] valids = {"ORDDATA", "\"SYSTEM\"", "APEX_123456", "FLOWS_12345"};
     for (final String valid : valids) {
       assertThat(
           "<%s> - include valid schemas - inclusion rule should evaluate to false".formatted(valid),
