@@ -12,10 +12,8 @@ import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
 
 import java.util.ArrayList;
-import java.util.Arrays;
-
+import java.util.List;
 import org.junit.jupiter.api.Test;
-
 import schemacrawler.tools.lint.LintUtility;
 
 public class LintUtilityTest {
@@ -28,10 +26,10 @@ public class LintUtilityTest {
     assertThat(LintUtility.listStartsWith(null, null), is(false));
 
     assertThat(LintUtility.listStartsWith(new ArrayList<>(), new ArrayList<>()), is(true));
-    assertThat(LintUtility.listStartsWith(new ArrayList<>(), Arrays.asList("1", "2")), is(false));
-    assertThat(LintUtility.listStartsWith(Arrays.asList("1"), Arrays.asList("1", "2")), is(false));
-    assertThat(LintUtility.listStartsWith(Arrays.asList("1", "2"), Arrays.asList("1")), is(true));
+    assertThat(LintUtility.listStartsWith(new ArrayList<>(), List.of("1", "2")), is(false));
+    assertThat(LintUtility.listStartsWith(List.of("1"), List.of("1", "2")), is(false));
+    assertThat(LintUtility.listStartsWith(List.of("1", "2"), List.of("1")), is(true));
 
-    assertThat(LintUtility.listStartsWith(Arrays.asList("3", "4"), Arrays.asList("1")), is(false));
+    assertThat(LintUtility.listStartsWith(List.of("3", "4"), List.of("1")), is(false));
   }
 }
