@@ -11,7 +11,6 @@ package us.fatehi.utility.test.string;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.is;
 
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -54,7 +53,7 @@ public class ObjectToStringFormatTest {
         new ObjectToStringFormat("hello, world").get(),
         is(new ObjectToStringFormat("hello, world").toString()));
 
-    final List<String> list = Arrays.asList("one", "two", "three");
+    final List<String> list = List.of("one", "two", "three");
     assertThat(new ObjectToStringFormat(list).get(), is("[\"one\", \"two\", \"three\"]"));
 
     final Map<String, Integer> map = new HashMap<>();
@@ -66,10 +65,15 @@ public class ObjectToStringFormatTest {
         is("{\n  \"one\": 1,\n  \"three\": 3,\n  \"two\": 2\n}"));
 
     assertThat(
-        new ObjectToStringFormat(new SomeClass("hello, world", 42)).get().replaceAll("\\R", ""),
+        new ObjectToStringFormat(new SomeClass("hello, world", 42)).get().replaceAll("\\R", "\n"),
         is(
-            "{  \"@object\": \"us.fatehi.utility.test.string.ObjectToStringFormatTest$SomeClass\",  "
-                + "\"integer\": 42,  \"string\": \"hello, world\"}"));
+            """
+            {
+              "@object": "us.fatehi.utility.test.string.ObjectToStringFormatTest$SomeClass",
+              "integer": 42,
+              "string": "hello, world"
+            }\
+            """));
   }
 
   @Test
